--- a/src/app/pages/user-management/country-setup/country-setup.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Country'">
+  <page-content-header [contentTitle]="ls.locale.country_setup.page_title_index">
     <div class="button-row" fxLayout="row">
       <button *ngIf="true" style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/user-management','countries','create']">
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Country</h2>
+        <h2 class="pl-8">{{ls.locale.country_setup.page_title_index}}</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -27,20 +27,6 @@
         [selectionType]="'checkbox'" [count]="pagination.total" [limit]="pagination.per_page"
         [offset]="offsetPagination" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)"
         (sort)="onSort($event)" (select)="onSelect($event)">
-
-        <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
-          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
-            let-selectFn="selectFn">
-            <mat-checkbox [disabled]="!permission?.hapus" [checked]="allRowsSelected"
-              (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-          </ng-template>
-
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
-            let-onCheckboxChangeFn="onCheckboxChangeFn">
-            <mat-checkbox [disabled]="!permission?.hapus" [checked]="isSelected" (change)="onCheckboxChangeFn($event)">
-            </mat-checkbox>
-          </ng-template>
-        </ngx-datatable-column> -->
 
         <ngx-datatable-column [name]="ls.locale.country_setup.name" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -72,7 +58,7 @@
               <p class="status text-truncate h6 p-4"
                 style="min-width: 100px !important;min-height: 20px;text-align: center;font-size: .9em;border-radius: 3px; text-transform: uppercase;"
                 [ngClass]="row.status == 'active' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{row.status == 'active' ? 'Aktif' : 'Tidak Aktif'}}
+                {{row.status == 'active' ? ls.locale.global.label.active : ls.locale.global.label.inactive}}
               </p>
             </div>
           </ng-template>
