--- a/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
+++ b/src/app/pages/user-management/country-setup/country-setup-edit/country-setup-edit.component.html
@@ -24,38 +24,38 @@
             <div fxLayout="column" fxFlex="45">
               <h2>Country</h2>
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput placeholder="Name" type="text" formControlName="name">
+                <input matInput placeholder="{{ls.locale.country_setup.name}}" type="text" formControlName="name">
                 <mat-error *ngIf="formCountry.controls['name'].hasError('required') && formCountry.controls['name'].touched ">
-                  {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                  {{ ls.locale.country_setup.name }} {{ ls.locale.global.messages.mandatory_text }}.
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput placeholder="Country ID" type="text" formControlName="code">
+                <input matInput placeholder="{{ls.locale.country_setup.country_id}}" type="text" formControlName="code">
                 <mat-error *ngIf="formCountry.controls['code'].hasError('required') && formCountry.controls['code'].touched ">
-                  {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                  {{ ls.locale.country_setup.country_id }} {{ ls.locale.global.messages.mandatory_text }}.
                 </mat-error>
               </mat-form-field>
 
               <h2>Phone Code</h2>
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput placeholder="Code" type="text" formControlName="phone_code">
+                <input matInput placeholder="{{ls.locale.country_setup.phone_code}}" type="text" formControlName="phone_code">
                 <mat-error *ngIf="formCountry.controls['phone_code'].hasError('required') && formCountry.controls['phone_code'].touched ">
-                  {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                  {{ ls.locale.country_setup.phone_code }} {{ ls.locale.global.messages.mandatory_text }}.
                 </mat-error>
               </mat-form-field>
               <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between">
 
                 <mat-form-field fxFlex="45" class="is-light">
-                  <input matInput placeholder="Min Length" type="text" formControlName="phone_min_length">
+                  <input matInput placeholder="{{ls.locale.country_setup.min_length}}" type="text" formControlName="phone_min_length">
                   <mat-error *ngIf="formCountry.controls['phone_min_length'].hasError('required') && formCountry.controls['phone_min_length'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    {{ ls.locale.country_setup.min_length }} {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="45" class="is-light">
-                  <input matInput placeholder="Max Length" type="text" formControlName="phone_max_length">
+                  <input matInput placeholder="{{ls.locale.country_setup.max_length}}" type="text" formControlName="phone_max_length">
                   <mat-error *ngIf="formCountry.controls['phone_max_length'].hasError('required') && formCountry.controls['phone_max_length'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    {{ ls.locale.country_setup.max_length }} {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
 
@@ -67,15 +67,15 @@
               <h2>Currency</h2>
               <div fxFlex="100" fxLayout="column" formGroupName="currencies">
                 <mat-form-field fxFlex="100" class="is-light">
-                  <input matInput placeholder="Symbol" type="text" formControlName="symbol">
+                  <input matInput placeholder="{{ls.locale.country_setup.symbol}}" type="text" formControlName="symbol">
                   <mat-error *ngIf="formCountry.get('currencies').controls['symbol'].hasError('required') && formCountry.get('currencies').controls['symbol'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    {{ ls.locale.country_setup.symbol }} {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
                 <mat-form-field fxFlex="100" class="is-light">
                   <input matInput placeholder="Decimal" type="text" formControlName="decimal">
                   <mat-error *ngIf="formCountry.get('currencies').controls['decimal'].hasError('required') && formCountry.get('currencies').controls['decimal'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    Decimal {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
               </div>
@@ -83,29 +83,29 @@
               <div fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between" [formGroup]="formCountry.get('currencies')">
                 
                 <mat-form-field fxFlex="45" class="is-light">
-                  <input matInput placeholder="Decimal Separator" type="text" formControlName="decimal_separator">
+                  <input matInput placeholder="{{ls.locale.country_setup.decimal_separator}}" type="text" formControlName="decimal_separator">
                   <mat-error *ngIf="formCountry.get('currencies').controls['decimal_separator'].hasError('required') && formCountry.get('currencies').controls['decimal_separator'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    {{ ls.locale.country_setup.decimal_separator }} {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
 
                 <mat-form-field fxFlex="45" class="is-light">
-                  <input matInput placeholder="Thousand Separator" type="text" formControlName="thousand_separator">
+                  <input matInput placeholder="{{ls.locale.country_setup.thousand_separator}}" type="text" formControlName="thousand_separator">
                   <mat-error *ngIf="formCountry.get('currencies').controls['thousand_separator'].hasError('required') && formCountry.get('currencies').controls['thousand_separator'].touched ">
-                    {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                    {{ ls.locale.country_setup.thousand_separator }} {{ ls.locale.global.messages.mandatory_text }}.
                   </mat-error>
                 </mat-form-field>
 
               </div>
 
-              <h2>Language</h2>
+              <h2>{{ls.locale.country_setup.language}}</h2>
               <mat-form-field fxFlex="100" class="is-light">
-                <mat-select placeholder="Language" formControlName="language_id">
+                <mat-select placeholder="{{ls.locale.country_setup.language}}" formControlName="language_id">
                   <mat-option *ngFor="let lang of languages" [value]="lang.id">{{ lang.name }}</mat-option>
                 </mat-select>
                 <mat-error class="mt-8 px-24"
                   *ngIf="formCountry.controls['language_id'].hasError('required') && formCountry.controls['language_id'].touched">
-                  Language harus diisi.
+                  {{ls.locale.country_setup.language}} {{ ls.locale.global.messages.mandatory_text }}.
                 </mat-error>
               </mat-form-field>
             </div>
@@ -113,23 +113,23 @@
           </div>
           <div class="ayo-middle pt-24" fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between">
             <div fxLayout="column" fxFlex="45">
-              <h2>Akses Ayo Toko</h2>
+              <h2>{{ls.locale.country_setup.access_retailer}}</h2>
               <recursive-slide-toggle [items]="formCountry.get('access_menu').get('abilities')['controls']" [depth]="0"></recursive-slide-toggle>
             </div>
             <div fxLayout="column" fxFlex="45">
-              <h2>Customer Service</h2>
+              <h2>{{ls.locale.country_setup.customer_service}}</h2>
               <div *ngFor="let item of formCountry.get('customer_service').controls; let i=index;">
                 <div fxFlex="100" [formGroup]="item" fxLayout="column">
                   <mat-form-field fxFlex="100" class="is-light">
-                    <input matInput placeholder="Telepon" type="text" formControlName="telepon">
+                    <input matInput placeholder="{{ls.locale.bantuan.text10}}" type="text" formControlName="telepon">
                     <mat-error *ngIf="item.controls['telepon'].hasError('required') && item.controls['telepon'].touched ">
-                      {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                      {{ls.locale.bantuan.text10}} {{ ls.locale.global.messages.mandatory_text }}.
                     </mat-error>
                   </mat-form-field>
                   <mat-form-field fxFlex="100" class="is-light">
-                    <input matInput placeholder="Email" type="text" formControlName="email">
+                    <input matInput placeholder="{{ls.locale.global.label.email}}" type="text" formControlName="email">
                     <mat-error *ngIf="item.controls['email'].hasError('required') && item.controls['email'].touched ">
-                      {{ ls.locale.admin_principal.text8 }} {{ ls.locale.global.messages.mandatory_text }}.
+                      {{ls.locale.global.label.email}} {{ ls.locale.global.messages.mandatory_text }}.
                     </mat-error>
                   </mat-form-field>
                   <div fxFlex="100" fxLayoutAlign="space-between">
