--- a/src/app/pages/user-management/language-setup/language-setup-create/language-setup-create.component.html
+++ b/src/app/pages/user-management/language-setup/language-setup-create/language-setup-create.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Tambah Country'">
+  <page-content-header [contentTitle]="ls.locale.language_setup.page_title_create">
   </page-content-header>
   <!-- / HEADER -->
   <div class="content p-24">
@@ -17,16 +17,16 @@
             
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="text" placeholder="Nama" formControlName="name">
+                <input matInput type="text" placeholder="{{ls.locale.language_setup.name}}" formControlName="name">
                 <mat-error *ngIf="step1.controls['name'].hasError('required') && step1.controls['name'].touched ">
-                  Nama Language harus diisi.
+                  {{ls.locale.language_setup.name}} {{ ls.locale.global.messages.mandatory_text }}.
                 </mat-error>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="validateStep(1)" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
 
@@ -38,21 +38,21 @@
 
           <form [formGroup]="step2">
 
-            <ng-template matStepLabel>Upload Retailer</ng-template>
+            <ng-template matStepLabel>{{ls.locale.language_setup.upload_retailer}}</ng-template>
             
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="text" placeholder="{{ (!step2.get('filename').value) ? 'No Selected File' : ''}}" formControlName="filename" readonly>
+                <input matInput type="text" placeholder="{{ (!step2.get('filename').value) ? ls.locale.language_setup.no_selected_file : ''}}" formControlName="filename" readonly>
                 <button matSuffix mat-raised-button (click)="openFile('retailer', 2)" [attr.aria-label]="'Upload'" class="mb-4">
                   <mat-icon>attach_file</mat-icon>
-                  <span>Pilih File</span>
+                  <span>{{ls.locale.language_setup.select_file}}</span>
                 </button>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="validateStep(2)" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
 
@@ -63,21 +63,21 @@
 
           <form [formGroup]="step3">
 
-            <ng-template matStepLabel>Upload Mitra</ng-template>
+            <ng-template matStepLabel>{{ls.locale.language_setup.upload_wholesaler}}</ng-template>
             
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="text" placeholder="{{ (!step3.get('filename').value) ? 'No Selected File' : ''}}" formControlName="filename" readonly>
+                <input matInput type="text" placeholder="{{ (!step3.get('filename').value) ? ls.locale.language_setup.no_selected_file : ''}}" formControlName="filename" readonly>
                 <button matSuffix mat-raised-button (click)="openFile('mitra', 3)" [attr.aria-label]="'Upload'" class="mb-4">
                   <mat-icon>attach_file</mat-icon>
-                  <span>Pilih File</span>
+                  <span>{{ls.locale.language_setup.select_file}}</span>
                 </button>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="validateStep(3)" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
 
@@ -88,21 +88,21 @@
 
           <form [formGroup]="step4">
 
-            <ng-template matStepLabel>Upload Principal</ng-template>
+            <ng-template matStepLabel>{{ls.locale.language_setup.upload_principal}}</ng-template>
             
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light">
-                <input matInput type="text" placeholder="{{ (!step4.get('filename').value) ? 'No Selected File' : ''}}" formControlName="filename" readonly>
+                <input matInput type="text" placeholder="{{ (!step4.get('filename').value) ? ls.locale.language_setup.no_selected_file : ''}}" formControlName="filename" readonly>
                 <button matSuffix mat-raised-button (click)="openFile('principal', 4)" [attr.aria-label]="'Upload'" class="mb-4">
                   <mat-icon>attach_file</mat-icon>
-                  <span>Pilih File</span>
+                  <span>{{ls.locale.language_setup.select_file}}</span>
                 </button>
               </mat-form-field>
             </div>
 
             <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
               <button mat-raised-button matStepperNext (click)="validateStep(4)" type="button" class="confirmation-button">
-                Lanjut
+                {{ls.locale.global.button.next}}
               </button>
             </div>
 
@@ -113,19 +113,19 @@
 
         <mat-step>
 
-          <ng-template matStepLabel>Selesai</ng-template>
+          <ng-template matStepLabel>{{ls.locale.global.button.finish}}</ng-template>
 
           <div class="h4" fxLayout="row" fxLayoutAlign="center center">
-            Apakah anda yakin untuk menyelesaikan isian ini ?
+            {{ls.locale.admin_principal.text4}}
           </div>
 
           <div class="pt-24" fxLayout="row" fxLayoutAlign="start center">
             <button class="mr-8" mat-stroked-button matStepperPrevious type="button" color="accent">
-              Kembali
+              {{ls.locale.global.button.back}}
             </button>
             <button mat-raised-button type="button" class="confirmation-button" (click)="submit()" [disabled]="submiting">
               <ng-container *ngIf="submiting == false">
-                Selesai
+                {{ls.locale.global.button.finish}}
               </ng-container>
               <ng-container *ngIf="submiting == true">
                 <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
