--- a/src/app/pages/user-management/language-setup/language-setup.component.html
+++ b/src/app/pages/user-management/language-setup/language-setup.component.html
@@ -1,6 +1,6 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Language'">
+  <page-content-header [contentTitle]="ls.locale.language_setup.page_title_index">
     <div class="button-row" fxLayout="row">
       <button *ngIf="true" style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/user-management','languages','create']">
@@ -13,7 +13,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Language</h2>
+        <h2 class="pl-8">{{ls.locale.language_setup.page_title_index}}</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -33,7 +33,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="200" name="File Name" prop="file_name">
+        <ngx-datatable-column [width]="200" name="{{ls.locale.language_setup.file_name}}" prop="file_name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div fxFlex="100" fxLayout="column">
               <span fxFlex="100" *ngFor="let file of row.files" fxLayout="row" fxLayoutAlign="space-between">
@@ -44,19 +44,19 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Updated" prop="updated_at" [sortable]="false">
+        <ngx-datatable-column name="{{ls.locale.language_setup.updated}}" prop="updated_at" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.updated_at }}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Export">
+        <ngx-datatable-column name="{{ls.locale.global.button.export}}">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
 
             <div class="button-row" fxLayout="row wrap" fxLayoutGap="10px" fxLayoutAlign="space-between">
               <button mat-icon-button fxFlex (click)="export(row)">
                 <mat-icon class="secondary-text">arrow_upward</mat-icon>
-                Export File
+                {{ls.locale.language_setup.export_file}}
               </button>
             </div>
 
